--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-body {
+html, body {
+    display: flex;
+    flex-direction: column;
     margin: 0;
-    background: rgba(0, 0, 0, 0.1);
+    height: 100vh;
 }
 
 .nav-bar {
@@ -32,4 +34,26 @@ body {
     text-decoration: none;
     color: black;
     font-size: larger;
+}
+
+.content-container {
+    display: flex;
+    justify-content: center;
+    background: url(images/background.jpg);
+    width: 100%;
+    height: 750px;
+    max-height: 100vh;
+}
+
+.content {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding: 20rem;
+    width: 75rem;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.footer {
+    text-align: center;
 }
