--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ html, body {
     display: flex;
     flex-direction: column;
     margin: 0;
-    height: 100vh;
 }
 
 .nav-bar {
@@ -38,18 +37,14 @@ html, body {
 
 .content-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     background: url(images/background.jpg);
-    width: 100%;
-    height: 750px;
-    max-height: 100vh;
 }
 
 .content {
     margin-top: 2rem;
     margin-bottom: 2rem;
-    padding: 20rem;
-    width: 75rem;
+    padding-bottom: 40rem;
     color: white;
     background-color: rgba(0, 0, 0, 0.8);
 }
