--- a/style.css
+++ b/style.css
@@ -202,12 +202,21 @@ html, body {
     width: 30rem;
 }
 
+.contact-header {
+    color: #FCFCFC;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: bold;
+    font-family: sans-serif, serif;
+    font-size: 2rem;
+}
+
 .contact-form form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-/* .footer {
+footer {
     text-align: center;
-} */
+}
